@@ -1,2 +1,2 @@
 [pytest]
-addopts = --tb=native --cov=src --cov-report=html src
+addopts = --tb=native --cov=src --cov-report=html src --timeout=10
