@@ -10,5 +10,7 @@ mock==1.0.1
 pytest-capturelog==0.7
 pytest-codecheckers==0.2
 pytest-cov==1.6
+pytest-timeout==0.3
+blessings==1.5
 requests==1.2.0
 bandersnatch==1.0.2.dev0
